# thyro_t1

./: .env.example  .env.production.example  .gitignore  .prettierignore  PROJECT_PROGRESS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/content/: __init__.py  assistant_policy.py  multilingual_messages.py  symptom_safety_rules.py
backend/app/core/: config.py  cookies.py  csrf.py  exceptions.py  logging.py  passwords.py  rate_limit.py  security_headers.py  tokens.py
backend/app/db/: collections.py  (+4 more)
backend/evals/: chatbot_cases.jsonl
backend/tests/: README.md  __init__.py  conftest.py  test_appointment_api.py  test_auth_flow.py  test_bson_safe_serialization.py  test_chat_api.py  test_dependencies.py  test_error_handling.py  test_google_identity_service.py  test_health.py  test_indexes_migrations.py  test_integration_mongo.py  test_jwt_tokens.py  test_knowledge_governance.py  test_medication_api.py  test_medication_schedule.py  test_models.py  test_mongo_migration.py  test_object_id.py  test_passwords.py  test_phase13a_account_auth.py  test_phase13b_chatbot.py  test_phone.py  test_privileged_user_provisioning.py  test_profile_api.py  test_profile_completion.py  test_repositories.py  test_security_headers.py  test_symptom_api.py
(+347 files in other folders)
